--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "download": "cd ./node_modules/rhyme-plus/data/ && sh fetch.sh"
   },
   "dependencies": {
+    "leven": "^2.1.0",
     "rhyme-plus": "^0.0.7",
+    "syllable": "^2.2.0",
     "tokenize-text": "^1.1.3",
     "word-list-google": "^1.0.1"
   }
